--- a/UNES/style.css
+++ b/UNES/style.css
@@ -1,4 +1,4 @@
-@import url('https://fonts.googleapis.com/css2?family=Noto+Sans+Elymaic&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Noto+Sans+Elymaic&family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap');
 
   .cabecalho {
     display: flex;
@@ -27,15 +27,15 @@
   }
   
   .menu ul {
-    display: flex; /* Flexbox na lista */
+    display: flex;
     list-style: none;
     margin: 0;
     padding: 0;
   }
   
   .menu li {
-    flex-grow: 1; /* Distribuir espaço entre os itens */
-    display: inline-block; /* Manter os itens em linha */
+    flex-grow: 1;
+    display: inline-block;
     margin-left: 20px;
   }
   
@@ -45,6 +45,40 @@
   }
   
   .menu a:hover {
-    color: #734190;
+    color: #552e59;
+  }
+  
+  .conteudo-principal-index {
+    text-align: center;
+    font-family: "Poppins", sans-serif;
+    
+  }
+  .conteudo-principal-index img {
+    width: 90%;
+    max-width: 1200px;
+  }
+
+  .conteudo-principal-index h1 {
+    color: #49285c;
+    font-size: 30px;
+    margin-bottom: 20px;
+  }
+
+  .conteudo-principal-index p {
+    color: #333;
+    font-size: 18px;
+    line-height: 1.5; 
+    margin-bottom: 15px;
+  }
+
+  .rodape {
+    width: 100%;
+    background-color: #eee;
+    padding: 0.5px;
+    text-align: center;
+    color: #552e59;
+    font-weight: bold;
+    font-size: 20px;
+    font-family: "Noto Sans Elymaic", sans-serif;
   }
   
